# universal-startup-manager

./: AGENTS.md  Cargo.toml  Makefile  README.md  universal-startup-manager.desktop  universal-startup-manager.spec
.copr/: Makefile
src/: main.rs
