[package]
name = "universal-startup-manager"
version = "1.0.2"
edition = "2024"

[dependencies]
anyhow = "1"
dirs = "5"
gio = { version = "0.20", package = "gio" }
glib = { version = "0.20", package = "glib" }
gtk4 = { version = "0.9", package = "gtk4" }
gtk4-macros = { version = "0.9", package = "gtk4-macros" }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
